Fixed header overlap issue

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
 #headerContainer{
     width: 100%;
     height: 500px;
+	display: flex;
 }
 .welcomeImg{
     height: 500px;
